--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,54 @@
-<h2>Forgot your password?</h2>
+<section class="vh-100" style="background-color: #eee;">
+  <div class="container h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-lg-12 col-xl-11">
+        <div class="card text-black" style="border-radius: 25px;">
+          <div class="card-body p-md-5">
+            <div class="row justify-content-center">
+              <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Password reset</p>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+                <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+                  <%= render "devise/shared/error_messages", resource: resource %>
+
+                  <div class="d-flex flex-row align-items-center mb-4">
+                    <i class="fas fa-envelope fa-lg fa-fw"></i>
+                    <div class="form-outline flex-fill mb-0">
+                      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+                      <%= f.label :email, 'Your email', class: 'form-label' %>
+                    </div>
+                  </div>
+
+                  <% if devise_mapping.rememberable? %>
+                    <div class="d-flex align-items-center mb-4">
+                      <div class="form-outline flex-fill mb-0">
+                        <%= f.check_box :remember_me, class: 'form-check-input me-2' %>
+                        <%= f.label :remember_me, class: 'form-check-label' %>
+                      </div>
+                    </div>
+                  <% end %>
+
+                  <div class="d-flex justify-content-between align-items-center mb-3 mb-lg-4">
+                    <%= f.submit "Send reset link", class: 'btn btn-primary' %>
+                    Or
+                    <%= link_to "Log in", new_session_path(resource_name), class: 'btn btn-outline-info' %>
+                  </div>
+
+                  <div class="d-flex justify-content-between align-items-center mb-3 mb-lg-4">
+                    <%= render "devise/shared/links" %>
+                  </div>
+
+                <% end %>
+              </div>
+              <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+                <img src="<%= image_path 'login' %>"
+                     class="img-fluid" alt="Sample image">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</section>
